@@ -226,7 +226,7 @@
     \let\ \, % C++ digit separator becomes a little white space
     \def\$##1{\egroup_{\rm##1}\bgroup}% suffix to constant
     \def\_{\cdot 10^{\aftergroup}}% power of ten (via dirty trick)
-    \let\~=\oct \let\^=\hex \let\\=\bin {#1}$}}%$%
+    \let\~=\oct \let\^=\hex \let\\=\bin #1}$}}%$%
 \def\U{\note{This code is used in section}} % xref for use of a section
 \def\Us{\note{This code is used in sections}} % xref for uses of a section
 \let\V=\lor % logical or
