@@ -461,7 +461,7 @@
   \def\Us{\note{Used in sections}} % crossref for uses of a section
   \def\I{\par\hangindent 2em}\let\*=*
   \readsections}
-\def\readsections{\input \jobname.sscn}
+\def\readsections{\input \jobname.scn}
 \def\datethis{} \def\datecontentspage{}
 
 % To produce only a subset of pages, put the page numbers on separate
