@@ -1,0 +1,45 @@
+\input cttwinxmac
+\I\|{a}\unskip, {\sc HAM}~\[1].
+\I\\{aa}\unskip, {\sc HAM}~\[1], 5, 6, 7.
+\I\\{advance}\unskip, {\sc HAM}~\[4], 5, 7.
+\I\&{Arc}\unskip, {\sc HAM}~1.
+\I\\{arcs}\unskip, {\sc HAM}~1, 3, 5, 6.
+\I\\{argc}\unskip, {\sc HAM}~\[1], 2.
+\I\\{argv}\unskip, {\sc HAM}~\[1], 2.
+\I\\{ark}\unskip, {\sc HAM}~\[4], 5, 7, 8.
+\I\|{b}\unskip, {\sc HAM}~\[1].
+\I\\{backtrack}\unskip, {\sc HAM}~\[4], 5.
+\I\\{bb}\unskip, {\sc HAM}~\[1].
+\I\\{count}\unskip, {\sc HAM}~\[1], 9.
+\I\|{d}\unskip, {\sc HAM}~\[1].
+\I\\{deg}\unskip, {\sc HAM}~\[1], 3, 5, 6.
+\I\\{dmin}\unskip, {\sc HAM}~\[1], 3.
+\I\\{done}\unskip, {\sc HAM}~\[4], 8.
+\I\\{exit}\unskip, {\sc HAM}~2.
+\I\\{fprintf}\unskip, {\sc HAM}~2.
+\I\|{g}\unskip, {\sc HAM}~\[1].
+\I\&{Graph}\unskip, {\sc HAM}~1.
+\I\\{main}\unskip, {\sc HAM}~\[1].
+\I\\{modulus}\unskip, {\sc HAM}~\[1], 2, 9.
+\I\\{name}\unskip, {\sc HAM}~1, 9.
+\I\\{next}\unskip, {\sc HAM}~1, 3, 5, 6, 7, 8.
+\I\\{printf}\unskip, {\sc HAM}~1, 9.
+\I\\{restore}\unskip, {\sc HAM}~\[4], 5, 7.
+\I\\{restore\_all}\unskip, {\sc HAM}~\[7], 8.
+\I\\{restore\_graph}\unskip, {\sc HAM}~1, 2.
+\I\\{sscanf}\unskip, {\sc HAM}~2.
+\I\\{stderr}\unskip, {\sc HAM}~2.
+\I\|{t}\unskip, {\sc HAM}~\[1].
+\I\\{taken}\unskip, {\sc HAM}~\[3], 4, 5, 7, 8.
+\I\\{tip}\unskip, {\sc HAM}~1, 5, 6, 7.
+\I\\{tmax}\unskip, {\sc HAM}~\[1], 4, 5, 9.
+\I\\{try\_next}\unskip, {\sc HAM}~\[4], 8.
+\I\|{u}\unskip, {\sc HAM}~\[1].
+\I\|{v}\unskip, {\sc HAM}~\[1].
+\I\\{vert}\unskip, {\sc HAM}~\[4], 5, 6, 8, 9.
+\I\&{Vertex}\unskip, {\sc HAM}~1.
+\I\\{vertices}\unskip, {\sc HAM}~1, 3, 4, 8, 9.
+\I\|{x}\unskip, {\sc HAM}~\[1].
+\I\|{y}\unskip, {\sc HAM}~\[1].
+\I\|{z}\unskip, {\sc HAM}~\[1].
+\fin
